Reproduction for fonts substitution issue